# mcp-server-demo

./: .gitignore  README.md  pyproject.toml
src/: atlassian_oauth.py  clients.py  figma_oauth.py  github_oauth.py  google_calendar_oauth.py  main.py  slack_oauth.py
src/mcp_servers/figma/: Figma-Context-MCP-validation.py  start-mcp.sh.sh
src/mcp_servers/google_calendar/: requirements.txt  server.py  start.sh
src/mcp_servers/salesforce/: requirements.txt  server.py
src/mcp_servers/salesforce/tools/: __init__.py  accounts.py  attachments.py  base.py  campaigns.py  cases.py  contacts.py  leads.py  metadata.py  opportunities.py
src/mcp_servers/slack/: klavis_slack_http_mcp_validator.py  klavis_slack_sse_mcp_validator.py  start_mcp.sh
